Revert "Add invisible reCAPTCHA - fixes (#3298)"
This reverts commit bf87c2de233a5db0481431b7f72267131d46ac52.

--- a/modules/theme/src/theme-core/definitions/apps/login-portal.less
+++ b/modules/theme/src/theme-core/definitions/apps/login-portal.less
@@ -102,18 +102,6 @@
                             }
                         }
 
-                        .resend-button {
-                            padding: 0 !important;
-                            background: none !important;
-                            border: none;
-                            cursor: pointer;
-                            color: #ff5000;
-                        }
-
-                        .resend-button:hover {
-                            text-decoration: underline;
-                        }
-
                         .align-center {
                             text-align: center;
                         }
